# Studio-code-code

./: .cache  .~lock.song_data_analyzed.xlsx#  README.md  Test.py  pyproject.toml  song_data_analyzed.xlsx  songs.xlsx
Prive/: Analyzer.py  Spotify.py  Stemlijst.xlsx  test.py
Prive/Spotistats/: Analyzer.py  Spotify.py
School/Week1/: Python_assignment_01.py  Python_assignment_02.py  command-line.md  cpu-sort.txt  welcome.txt
