[tool.poetry]
name = "studio-code-code"
version = "0.1.0"
description = ""
authors = ["XanderTeWinkel <xander.te.winkel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
